# quadcopter_ros

./: .gitignore  README.md  docker-compose.yml
controller/: CMakeLists.txt  package.xml
controller/config/: pid_params.yaml
controller/include/AltitudeControl/: AltitudeController.cpp  AltitudeController.h
controller/include/altitudeControl/: AltitudeController.cpp  AltitudeController.h
controller/include/controller/: AltitudeController.h  Controller.h  PID.cpp  PID.h
controller/launch/: controller.launch
controller/src/: AltitudeController.cpp  Controller.cpp  PID.cpp  controller.cpp
docker/: Dockerfile  docker-compose.yml  dockerfile
quadcopter/: CMakeLists.txt  nodelet_quad.xml  package.xml
quadcopter/config/: quadcopter_params.yaml
quadcopter/include/quadcopter/: Quadcopter.h
quadcopter/msg/: Thrust.msg
quadcopter/src/: Quadcopter.cpp
quadcopter/src/drone_dynamics/: CMakeLists.txt  nodelet_quad.xml  package.xml
quadcopter/src/drone_dynamics/include/drone_dynamics/: Quadopter.h
quadcopter/src/drone_dynamics/msg/: Thrust.msg
quadcopter/src/drone_dynamics/src/: Quadcopter.cpp
quadcopter/src/quadcopter/: CMakeLists.txt  package.xml
quadcopter/src/quadcopter/include/quadcopter/: Quadopter.h
quadcopter/src/quadcopter/msg/: Rate.msg
quadcopter/src/quadcopter/src/: Quadcopter.cpp
quadcopter/src/simulation/: CMakeLists.txt  package.xml
src/model_pkg/: CMakeLists.txt  package.xml
